# read-aloud

./: .gitattributes  .gitignore  Makefile  README.md  generate.py  package-lock.json  pyproject.toml  requirements-dev.txt
.github/: FUNDING.yml
.github/workflows/: lint.yml  release.yml  test.yml
architecture/: README.md  diagram.mmd
frontend/: App.js  app.json  package-lock.json  package.json
src/aloud/: api.py  cli.py  core.py
tests/: test_api.py
