[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aloud"
version = "0.1.1"
description = "A CLI tool to read text or websites aloud."
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
    "pyttsx3>=2.90",
    "requests",
    "beautifulsoup4",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pyobjc; sys_platform == 'darwin'"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black==23.11.0",
    "build>=1.0.0",
    "httpx>=0.26.0",
    "pytest>=8.0.0",
    "ruff>=0.3.0"
]

[project.scripts]
aloud = "aloud.cli:main"
